--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,50 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:is(.dark *));
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+/* custom breakpoint */
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@theme {
+  --breakpoint-lxl: 1300px;
+  --breakpoint-3xl: 1600px;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-inter);
+}
+@theme inline {
+  --color-background: var(--background);
+  --color-primary: var(--primary);
+  --color-text-primary: var(--text-primary);
+  --color-text-secondary: var(--text-secondary);
+  --font-dmSans: var(--font-dmSans);
+  --font-inter: var(--font-inter);
+  --color-accent: var(--accent);
+  --color-text-dark-primary: var(--text-dark-primary);
+  --accent-hover: var(--accent-hover);
+  --color-text-secondary-dark: var(--text-secondary-dark);
+  --color-accent-hover: var(--accent-hover);
+}
+/* #fcfff2 */
+:root {
+
+  --primary: #0271E8E8;
+  --text-primary: #060606;
+  --text-secondary: #65758B;
+  /* --accent: #71f9a3;
+  --accent-hover: #0d9276; */
+}
+
+.dark {
+  --background: #0a1929;
+  --primary: #4ade80;
+  --text-dark-primary: #f1f5f9;
+  --text-secondary-dark: #cbd5e1;
+  --accent: #71f9a3;
+  --accent-hover: #0d9276;
+}
+
+div#radix-_R_hlb_ {
+    background: white;
 }
